Fix role colors and row hover highlight in high contrast mode

--- a/frontend-apps/administrator/src/index.css
+++ b/frontend-apps/administrator/src/index.css
@@ -1,1 +1,9 @@
 @import url("@azayaka-frontend/ui/src/index.css");
+
+@layer base {
+	.high-contrast {
+		.employee-role {
+			@apply !border-foreground !text-foreground !bg-transparent;
+		}
+	}
+}
